tyk-docs/static/css/bespoke.css
/* ... */
/* Pro - Span's 2 columns */
.pricing-comparison-pro.wide {
  width: calc(200% + 20px);
}

.pricing-comparison-hybrid .pricing-comparison-pro.wide {
  visibility: hidden;
  margin-left: calc(-100% + -10px);
}





/* ==========================================================================
  Layout : Hero
   ========================================================================== */
.hero {
  position: relative;
  color: #FFF;
  min-height: 640px;
  overflow: hidden;
}

.hero:before {
  content: '';
  padding-top: 25%;
  display: block;
}

.hero .container {
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  z-index: 1;
}

.hero .button {
  max-width: 338px;
  display: block;
  text-align: center;
}

.hero .button:first-of-type {
  margin-top: 40px;
}

.hero.has-background {
  background-size: auto 100%;
  background-position: center center;
}

.hero-caption {
  max-width: 460px;
  z-index: 1;
  padding-top: 130px;
}

.hero-caption img,
.hero-caption svg {
  width: 85px;
  height: 85px;
  margin-right: 20px;
  margin-bottom: 16px;
  float: left;
}

.hero-caption h1 {
  margin: 0;
  line-height: 1.16666666666667;
}

.hero-caption h1.has-icon {
  line-height: 85px;
}

.hero-caption h1,
.hero-caption h2 {
  font-weight: bold;
}

.hero-caption h2 {
  color: #a7a6b4;
  text-transform: uppercase;
  letter-spacing: 0.15em;
  margin-top: -14px;
  margin-bottom: 14px;
}

.hero-caption p {
  clear: both;
}

.hero-caption *:last-child {
  margin-bottom: 0;
}

.hero-animation {
  position: absolute;
  width: 100%;
  left: 0;
  top: 0;
  height: 640px;
  z-index: 0;
}

.hero-animation span {
  position: absolute;
  -webkit-background-size: 100% auto;
  -moz-background-size: 100% auto;
  -o-background-size: 100% auto;
  background-size: 100% auto;
  background-position: center center;
  background-repeat: no-repeat;
  display: block;
  -webkit-transform: translate3d(0, 0, 0);
  transform: translate3d(0, 0, 0);
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

/* Case Study Style */
.hero-sidebyside {
  padding-top: 130px;
}

.hero-sidebyside .hero-text {
  width: 50%;
  right: 32px;
}

.hero-sidebyside h1 {
  left: 32px;
  line-height: 70px;
  font-weight: bold;
  width: 50%;
}

.hero-sidebyside p:last-of-type {
  margin-bottom: 0;
}

.hero-sidebyside img {
  width: 70px;
  height: auto;
  float: left;
  margin-right: 12px;
}

/* Centered */
.hero.centered .hero-caption {
  max-width: 400px;
  width: 100%;
  left: 0;
  right: 0;
  text-align: center;
  margin: auto;
  top: 50%;
  -webkit-transform: translateY(-50%);
  transform: translateY(-50%);
  position: absolute;
  padding-top: 0;
}

.hero.centered h1 {
  margin-bottom: 38px;
}

/* Mobile Image */
.hero-mobile-image {
  display: none;
}

/* Product Hero */
.hero-product img {
  margin-bottom: 38px;
}

.hero-product h1 {
  white-space: nowrap;
}

/* ==========================================================================
  Layout : Text
   ========================================================================== */
.layout-text {
  padding: 60px 0;
}

/* ==========================================================================
  Layout : Flipflop
   ========================================================================== */
.layout-flipflop {
  display: block;
  position: relative;
  max-height: 576px;
  background: #FFF;
}

.layout-flipflop .container:before {
  content: '';
  padding-top: 36.4%;
  width: 100%;
  display: block;
}

.layout-flipflop article,
.layout-flipflop figure {
  width: 50%;
  height: 100%;
  position: absolute;
  top: 0;
}

.layout-flipflop figure {
  background-color: #c6e2ed;
}

.layout-flipflop .flipflop-caption {
  padding: 60px;
  max-width: 608px;
}

.layout-flipflop h2 {
  margin-bottom: 35px;
}

.layout-flipflop .button {
  margin-bottom: 0;
}

.flipflop-mobile-image {
  display: none;
}

.layout-flipflop figure {
  overflow: hidden;
}

.layout-flipflop img {
  position: absolute;
  top: 0;
}

.layout-flipflop hr {
  border: 0;
  border-top: 1px solid #909098;
  max-width: 245px;
  margin-bottom: 20px;
}

.layout-flipflop.left article {
  left: 50%;
}

.layout-flipflop.left figure {
  background-position: right center;
}

.layout-flipflop.left .flipflop-caption {
  padding-right: 32px;
}

.layout-flipflop.left img {
  right: 0;
}

.layout-flipflop.right figure {
  left: 50%;
  background-position: left center;
}

.layout-flipflop.right .flipflop-caption {
  padding-left: 0;
  right: 0;
  left: 0;
}

.layout-flipflop.right img {
  left: 0;
}


/* ==========================================================================
  Layout : Button
   ========================================================================== */
.layout-button {
  text-align: center;
  padding: 0 0 120px 0;
  background: #e1e1e1;
}

.layout-button .button {
  max-width: 406px;
  margin-bottom: 0;
}

/* ==========================================================================
  Layout : Features
   ========================================================================== */
.layout-features {
  padding-top: 100px;
  background: #e1e1e1;
}

.layout-features article {
  padding: 0 60px 82px 70px;
  float: left;
  width: 50%;
  position: relative;
}

.layout-features h2 {
  margin-bottom: 12px;
}

.layout-features h2:before {
  width: 42px;
  height: 49px;
  font-size: 49px;
  line-height: 1;
  position: absolute;
  top: -14px;
  left: 0;
}

.layout-features br {
  clear: both;
}

.feature-products {
  position: absolute;
  top: -4px;
  right: 60px;
  font-size: 0;
}

.feature-products .button {
  margin-left: 10px;
}

/* ==========================================================================
  Layout : Footer
   ========================================================================== */
.layout-footer {
  position: relative;
  z-index: 0;
}

.layout-footer,
.layout-footer .container {
  min-height: 580px;
}

.layout-footer .left,
.layout-footer .right {
  z-index: 2;
}
/* ... */

